<resources>
    <string name="app_name">RadioArtvisi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radio_artvisi">Radio Artvisi</string>
    <string name="asosiasi_radio_dan_tv_islam_indonesia">Asosiasi Radio dan TV Islam Indonesia</string>
    <string name="radio">Radio</string>
    <string name="tv">Tv</string>
    <string name="list_of_radio">List of Radio</string>
    <string name="list_of_tv">List of Tv</string>
</resources>
